--- a/ide/app/spark.html
+++ b/ide/app/spark.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="packages/bootjack/css/bootstrap.css">
   <link rel="stylesheet" href="packages/bootjack/css/bootstrap-theme.css">
   <link rel="stylesheet" href="spark.css">
+  <link rel="stylesheet" href="treeview.css">
 
   <template id="fileview-filename" >
     <div class="fileview-filename-container" style="height: 20px;">
